General fixes, More responsive
Squashed some bugs. Responsive for more devices now.

--- a/css/admin_styles.css
+++ b/css/admin_styles.css
@@ -974,7 +974,7 @@ footer
 /* STYLES FOR DEVICE WITH SMALLER SCREENS GO HERE*/
 /* ////////////////////////////////////////////////*/
 
-@media screen and (max-width:480px)
+@media (max-width:641px)
 {
 			*
 			{
@@ -1065,8 +1065,8 @@ footer
 
 			div#page-title > header
 			{
-				font-size: 18px;
-				text-align: center;
+				font-size: 15px;
+				text-align: left;
 				margin-left: 8px;
 				padding-top: 15px;
 			}
@@ -1164,11 +1164,7 @@ footer
 
 		button.back-button
 		{
-			/*width: 25px;
-			font-size: 15px;
-			padding: 0px 3px;
-			margin: 0px 3px;
-			height: 25px;*/
+
 			display: none;
 
 		}
@@ -1179,10 +1175,15 @@ footer
 			margin-left: 5px;
 		}
 
+		div#toggle-view > p
+		{
+			font-weight: normal;
+			font-size: 14px;
+		}
 		div.card
 		{
 			width: 250px;
-			margin-left: 50px;
+			margin-left: 20px;
 		}
 
 		div.card > div.card-image
@@ -1227,7 +1228,7 @@ footer
 
 		form#package, form#user
 		{
-			width: 330px;
+			width: 275px;
 			margin: 20px 5px;
 		}
 
@@ -1239,12 +1240,12 @@ footer
 
 		form#package > input[type=text], form#package > input[type=password], form#package > input[type=email], form#package > select
 		{
-			width: 300px;
+			width: 250px;
 		}
 
 		form#package > textarea
 		{
-			width: 300px;
+			width: 250px;
 			height: 100px;
 		}
 
@@ -1257,8 +1258,8 @@ footer
 
 		form#search
 		{
-			width: 330px;
-			margin: 50px 10px;
+			width: 280px;
+			margin: 50px 5px;
 			height: 275px;
 		}
 
@@ -1281,7 +1282,7 @@ footer
 
 		form#user > input[type=text], form#user > input[type=password], form#user > input[type=email], form#user > select
 		{
-			width: 300px;
+			width: 250px;
 		}
 
 		div#result-container
@@ -1302,8 +1303,9 @@ footer
 
 		div#result-container > div#actions > input[type="text"]
 		{
-			width: 275px;
+			width: 175px;
 			font-size: 18px;
+			margin-right: 2px;
 			font-weight: normal;
 		}
 
@@ -1311,9 +1313,317 @@ footer
 		{
 			font-size: 18px;
 		}
-		table#update-history > tbody > tr > td:nth-of-type(1):before { content: "Timestamp"; }
+		table#update-history > tbody > tr > td:nth-of-type(1):before { content: ""; }
 		table#update-history > tbody > tr > td:nth-of-type(2):before { content: "Update"; }
 		table#update-history > tbody > tr > td:nth-of-type(3):before { content: "User/Agent"; }
 
 
 } /* End of styles for mobile devices */
+
+/*///////////////////////////////////////*/
+/* Do this for tablet devices*/
+/*////////////////////////////////////////*/
+
+@media (min-width:642px) and (max-width: 961px)
+{
+	nav
+	{
+		width: 170px;
+		height: 100%;
+		position: absolute;
+	}
+
+
+	nav > span > p#app-name, nav > span > p#user-name
+	{
+		margin-left: 8px;
+		font-size: 18px;
+
+	}
+
+
+	nav >  a.link, nav > a.link:hover
+	{
+		padding: 12px 0px 25px 3px;
+		font-size: 1em;
+		/*color: transparent;*/
+	}
+
+	nav > a.link > i
+	{
+		color: #ffffff;
+		font-size: 23px;
+	}
+
+	nav > a.link > i:hover
+	{
+		color: #333645;
+	}
+
+	nav > a.link > span
+	{
+
+		margin-left: 3px;
+		color: #ffffff;
+		padding: 3px 5px;
+		border-radius: 3px;
+
+	}
+
+	div#content2
+	{
+		margin-left: 180px;
+		width: 75%;
+	}
+
+	div#page-title
+	{
+		height: 75px;
+		margin-left: 15px;
+		width: 93%;
+	}
+
+	div#page-title > header
+	{
+		font-size: 18px;
+		text-align: center;
+		margin-left: 8px;
+		padding-top: 15px;
+	}
+
+	div#content
+	{
+		margin-left: 0px;
+		width: 95%;
+	}
+
+	div.recent-items, div.at-a-glance, div.news-feed
+	{
+		width: 100%;
+		margin-left: 10px;
+	}
+
+	div.recent-items > header, div.at-a-glance > header, div.news-feed > header
+	{
+		padding: 5px 5px 5px 5px;
+		margin: 5px 0px;
+		font-size: 15pt;
+	}
+
+	div.news-feed > p.newsitem
+	{
+		padding: 8px 5px 0px 5px;
+		font-size: 14px;
+		margin: 0px 0px 0px 5px;
+
+	}
+
+	#data > p
+	{
+		padding: 5px;
+	}
+
+	div#at-a-glance > section.card
+	{
+		padding: 10px 0px 0px 0px;
+	}
+
+	table, thead, tbody, th, td, tr
+	{
+		display: block;
+	}
+
+	/* Hide table headers (but not display: none;, for accessibility) */
+	thead tr
+	{
+		position: absolute;
+		top: -9999px;
+		left: -9999px;
+	}
+
+
+	td
+	{
+		/* Behave  like a "row" */
+		border: none;
+		border-bottom: 1px solid #eee;
+		position: relative;
+		padding-left: 50%;
+	}
+
+	td:nth-of-type(1)
+	{
+		padding-left: 5px;
+		font-size: 15px;
+		text-align: right;
+	}
+
+	td:before
+	{
+		/* Now like a table header */
+		position: absolute;
+
+		/* Top/left values mimic padding */
+		top: 3px;
+		left: 3px;
+		padding-right: 0px;
+		font-weight: 600;
+		white-space: nowrap;
+	}
+
+	/* Label the data */
+	td:nth-of-type(1):before { content: ""; }
+	td:nth-of-type(2):before { content: "Customer"; }
+	td:nth-of-type(3):before { content: "Main Issue"; }
+	td:nth-of-type(4):before { content: "Description"; }
+	td:nth-of-type(5):before { content: ""; }
+
+
+
+
+button.back-button
+{
+	/*width: 25px;
+	font-size: 15px;
+	padding: 0px 3px;
+	margin: 0px 3px;
+	height: 25px;*/
+	display: none;
+
+}
+
+div#toggle-view
+{
+	padding: 20px 0px;
+	margin-left: 5px;
+}
+
+div.card
+{
+	width: 250px;
+	margin-left: 50px;
+}
+
+div.card > div.card-image
+{
+	padding-top: 8px;
+	width: 250px;
+}
+
+div.card > div.card-image > p > img
+{
+	height: 100px;
+	width: 120px;
+}
+
+div.card > div.card-details > p.customer, div.card > div.card-details > p.issue, div.card > div.card-details > p.description
+{
+	font-size: 1em;
+
+}
+
+div.card > div.card-footer > p.trackingnumber
+{
+	font-size: 12px;
+}
+
+div.card > div.card-footer > p.url > a
+{
+	font-size: 13px;
+}
+
+div#pagination-holder
+{
+	margin-left: 50px;
+	max-width: 80%
+
+}
+
+div#pagination-holder > p
+{
+	font-size:15px;
+}
+
+form#package, form#user
+{
+	width: 500px;
+	margin: 20px 15px;
+}
+
+
+form#package > p, form#user > p
+{
+	font-size: 1em;
+}
+
+form#package > input[type=text], form#package > input[type=password], form#package > input[type=email], form#package > select
+{
+	width: 450px;
+}
+
+form#package > textarea
+{
+	width: 480px;
+	height: 100px;
+}
+
+input[type=submit], button
+{
+	width: 75px;
+	margin: 10px 220px;
+
+}
+
+form#search
+{
+	width: 530px;
+	margin: 50px 30px;
+	height: 275px;
+}
+
+form#search > p, form#user > p
+{
+	margin: 10px;
+	padding: 10px;
+
+}
+
+form#search > input[type=text]
+{
+	margin-left: 40px;
+}
+
+form#search > input[type=submit], form#search > button
+{
+	margin-left: 90px;
+}
+
+form#user > input[type=text], form#user > input[type=password], form#user > input[type=email], form#user > select
+{
+	width: 480px;
+}
+
+div#result-container
+{
+	margin:0px 0px 0px 10px;
+}
+div#result-container > p
+{
+	margin-top: 15px;
+	font-size: 17px;
+	font-weight: normal;
+}
+
+div#result-container > p#errorMessage
+{
+	display: block;
+}
+
+div#result-container > div#actions > input[type="text"]
+{
+	width: 275px;
+	font-size: 18px;
+	font-weight: normal;
+}
+
+}
